k8s/openglotApi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openglot-api-service
  labels:
    app: openglot-api
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: openglot-api
